randomly thought about the paper-item deletion code and thought that the check really doesnt need to be there; realistically, if you just analyze the statistical probability that the check is getting 0 vs any other number you will see that  making a loop that loops from 0 to 0 isnt that big of a deal, especially if it means that every other time we can go straight into a loop instead of checking

--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -161,10 +161,10 @@
           var motherPolymer = Polymer.dom(listbox).children; 
 
           // remove the paper-items from the last time and the other speakers, basically throwing away the stuff that we dont need
-          if(motherPolymer.length > 2) {    // change that 2 to something that is not so fragile
+          //if(motherPolymer.length > 2) {    // change that 2 to something that is not so fragile      // dont even need to check, think of the numerical analysis of checking
             for(var i = motherPolymer.length - 1; i > 1; i--)
               Polymer.dom(listbox).removeChild(motherPolymer[i]);
-          }
+          //}
 
           // injecting the paper-items for the presets
           for (i in controller.speaker.PresetNames) {
