--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -13,6 +13,15 @@ body {
   margin: 0 auto;
 }
 
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.6; /* see below for cross-browser opacity */
+}
+
 html, body {
   height: 100%;
 }
