--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -81,6 +81,9 @@
             debounce-duration="300"></iron-ajax>
   </template>
   <script>
+
+    var lastSelected = 0;
+
     Polymer({
       is: 'omaha-app',
 
