--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -141,7 +141,7 @@
           console.log(document.getElementById('equalizerMenu'));
 
           // Set averaging mode
-          document.getElementById('menu').selected = this.$.controller.speaker.AveragingMode - 1;
+          document.getElementById('effectiveness').value = this.$.controller.speaker.AveragingMode;
 
           // Set paging levels
           document.getElementById('pagingvolume').value = this.$.controller.speaker.VolumeLevel[2];
@@ -164,19 +164,21 @@
           var motherPolymer = Polymer.dom(listbox).children; 
 
           // remove the paper-items from the last time and the other speakers, basically throwing away the stuff that we dont need
-          //if(motherPolymer.length > 2) {    // change that 2 to something that is not so fragile      // dont even need to check, think of the numerical analysis of checking
-            for(var i = motherPolymer.length - 1; i > 1; i--)
+          if(motherPolymer.length > 1) {    // change that 2 to something that is not so fragile      // dont even need to check, think of the numerical analysis of checking
+            for (var i = motherPolymer.length - 1; i > 1; i--)
               Polymer.dom(listbox).removeChild(motherPolymer[i]);
-          //}
-
+          
+          }
           // injecting the paper-items for the presets
-          for (i in controller.speaker.PresetNames) {
-            temp = document.createElement("paper-item");
-            temp.setAttribute("value", controller.speaker.PresetNames[i].valueOf().replace("\n", ""));
-            temp.setAttribute("id", controller.speaker.PresetNames[i].valueOf().replace("\n", ""));
-            // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
-            temp.innerHTML = controller.speaker.PresetNames[i].valueOf().replace("\n", "");
-            Polymer.dom(listbox).appendChild(temp);
+          if(controller.speaker.PresetNames.length > 0) {
+            for (i in controller.speaker.PresetNames) {
+              temp = document.createElement("paper-item");
+              temp.setAttribute("value", controller.speaker.PresetNames[i].valueOf().replace("\n", ""));
+              temp.setAttribute("id", controller.speaker.PresetNames[i].valueOf().replace("\n", ""));
+              // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
+              temp.innerHTML = controller.speaker.PresetNames[i].valueOf().replace("\n", "");
+              Polymer.dom(listbox).appendChild(temp);
+            }
           }
         }
       },
