--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -38,6 +38,12 @@
       equalizer-controller {
         width: 90%;
         min-width: 300px;
+        height: calc(60% + calc(.6 * 100vw));
+      }
+
+      averaging-controller {
+        width: 70%;
+        height: 100%;
       }
 
       @media (min-width: 769px) {
@@ -79,7 +85,7 @@
     <div id="radio-container" class="layout horizontal">
       <paper-radio-group id="mode" selected="{{mode}}">
         <paper-radio-button id="volumeButton" name="volume" class="flex">Volume</paper-radio-button>
-        <paper-radio-button id="averagingButton" name="averaging" class="flex">Averaging</paper-radio-button>
+        <paper-radio-button id="averagingButton" name="averaging" class="flex">Comfort</paper-radio-button>
         <paper-radio-button id="equalizerButton" name="equalizer" class="flex">Equalizer</paper-radio-button>
         <paper-radio-button id="pagingButton" name="paging" class="flex">Paging</paper-radio-button>
       </paper-radio-group>
@@ -98,7 +104,7 @@
         </simple-fit>
       </neon-animatable>
 
-      <neon-animatable page="equalizer" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
+      <neon-animatable page="equalizer" id="equalizer-controller" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
           <equalizer-controller id="equalizer" speaker-id="[[speakerId]]" speaker="[[speaker]]" equalizer="{{equalizerone}}"></equalizer-controller>
         </simple-fit>
@@ -362,6 +368,16 @@ paper-radio-group {
 
           var controller = document.getElementsByClassName('controller');
           console.log("hiiii", controller);
+
+          //$(window).resize(function() {
+    
+//      console.log($(window).width());
+      
+//console.log(document.getElementById("eighty").offsetWidth);
+//console.log(document.clientHeight);
+//document.getElementById("equalizer-controller").style.height = 'calc(60% + (.05 * 100vw))';
+//console.log(document.getElementById("").offsetHeight);
+//});
 
   </script>
 </dom-module>
