--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -38,7 +38,8 @@
       equalizer-controller {
         width: 90%;
         min-width: 300px;
-        height: calc(60% + calc(.6 * 100vw));
+        /*height: calc(60% + calc(.6 * 100vw));*/
+        height: 100%;
       }
 
       averaging-controller {
