--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -95,7 +95,7 @@
 
       <neon-animatable page="averaging" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
-          <averaging-controller id="averaging" speaker-id="[[speakerId]]" averaging="[[averaging]]"></averaging-controller>
+          <averaging-controller id="averaging" speaker="[[speaker]]" averaging="[[averaging]]"></averaging-controller>
         </simple-fit>
       </neon-animatable>
 
@@ -107,13 +107,13 @@
 
       <neon-animatable page="equalizer" id="equalizer-controller" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
-          <equalizer-controller id="equalizer" speaker-id="[[speakerId]]" speaker="[[speaker]]" equalizer="{{equalizerone}}"></equalizer-controller>
+          <equalizer-controller id="equalizer" speaker-id="[[speakerId]]" speaker="[[speaker]]" equalizer="{{equalizerone}}"></equalizer-controller> <!-- Don't know if we need the speakerId anymore -->
         </simple-fit>
       </neon-animatable>
 
       <neon-animatable page="paging" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
-          <paging-controller id="paging" paging="{{pagingLevel}}"></paging-controller>
+          <paging-controller id="paging" speaker-id="[[speakerId]]" paging="{{pagingLevel}}"></paging-controller>
         </simple-fit>
       </neon-animatable>
 
