made equalizer larger and it still scaled well, quick-fixed the SendPagingRequest function, tryign to get FF to work

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -13,10 +13,10 @@
 <link rel="import" href="/bower_components/paper-item/paper-item.html">
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
 <link rel="stylesheet" href="jquery-ui-1.11.4.css">
-<script src="jquery-1.10.2.js"></script>
+<script src="jquery-1.10.2.js" type="text/jscript"></script>
 <!--<script src="jquery-2.2.0.js"></script>-->
-<script src="jquery-ui-1.11.4.js"></script>
-<script src="jquery.ui.touch-punch.js"></script>
+<script src="jquery-ui-1.11.4.js" type="text/jscript"></script>
+<script src="jquery.ui.touch-punch.js" type="text/jscript"></script>
 
 <dom-module id="equalizer-controller">
   <template>
@@ -34,12 +34,12 @@
 
       paper-card {
         width: 100%;
-        height: calc(60% + calc(.6 * 100vw));   /* This was 100%, cahnge back if needed */
+        height: 100%;   /* This was 100%, cahnge back if needed */
       }
 
       .paper-card .card-content {
         padding: 0px;
-        height: 150%;
+        height: 200%;
       }
       
       paper-button {
