--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -27,7 +27,7 @@
       }
       
       paper-button {
-        background-color: #4285f4;
+        background-color: #3367d6;
         color: #fff;
         margin-top: 20px;
         width: 100%;
