changed all the blue color codes to #3f51b5, still need to fix the increment/decrement stuff for the pages with multiple sliders, and need to fix the tooltip not showing stuff, make the sliders always show the value of the slider and remove the popup, UI might look better and is clearer to the user

--- a/software/src/omaha/templates/components/averaging-controller.html
+++ b/software/src/omaha/templates/components/averaging-controller.html
@@ -35,7 +35,8 @@
       }
       
       paper-button {
-        background-color: #3367d6;      /* This is not needed and for some reason is still here */
+        /*background-color: #3367d6;      /* This is not needed and for some reason is still here */
+        background-color: #3f51b5;
         color: #fff;
         margin-top: 10px;
         text-align: center;
