--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -28,7 +28,7 @@
         padding: 10px;
       }
       paper-button {
-        background-color: #3367d6;
+        background-color: #3f51b5;
         color: #fff;
         margin-top: 5px;
         width: 100%;
@@ -220,7 +220,7 @@
           '#9c27b0',
           '#e91e63',
           '#f44336'*/
-          '#3367d6'
+          '#3f51b5'
         ];
         
         var unusedColors = [
@@ -240,7 +240,7 @@
           '#9c27b0',
           '#e91e63',
           '#f44336'*/
-          '#3367d6'
+          '#3f51b5'
         ];
         var colorMap = {};
         
