--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -43,7 +43,7 @@
       }
       
       paper-button {
-        background-color: #3367d6;
+        background-color: #3f51b5;
         color: #fff;
         margin-top: 1px;
       }
