--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -20,14 +20,14 @@
       }
       
       .company {
-        color: #3367d6;
+        color: #3f51b5;
         font-size: 20px;
         font-weight: 500;
         margin-bottom: 5px;
       }
       
       paper-button {
-        background-color: #3367d6;
+        background-color: #3f51b5;
         color: #fff;
         margin-top: 20px;
         width: 100%;
