--- a/software/src/omaha/templates/components/speaker-tooltip.html
+++ b/software/src/omaha/templates/components/speaker-tooltip.html
@@ -10,7 +10,7 @@
       }
       paper-button {
        /* background-color: #4285f4; */
-       background-color: #3367d6;
+       background-color: #3f51b5;
         color: #fff;
         margin-top: 5px;
         width: 100%;
