--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -25,7 +25,7 @@
       }
       
       paper-button {
-        background-color: #3367d6;
+        background-color: #3f51b5;
         color: #fff;
         margin-top: 10px;
       }
